--- a/index.html
+++ b/index.html
@@ -1,22 +1,17 @@
 <table border="1">
    <tr>
-     <th>名称</th>
-     <th>官网</th>
-     <th>性质</th>
+      <th>作業:HTML表格</th>
    </tr>
    <tr>
-     <td>C语言中文网</td>
-     <td>http://c.biancheng.net/</td>
-     <td>教育</td>
+     <td>班級</td>
+     <td>資工二甲</td>
    </tr>
     <tr>
-     <td>百度</td>
-     <td>http://www.baidu.com/</td>
-     <td>搜索</td>
+     <td>姓名</td>
+     <td>謝子怡</td>
      </tr>
    <tr>
-      <td>当当</td>
-     <td>http://www.dangdang.com/</td>
-      <td>图书</td>
+      <td>學號</td>
+     <td>1111032013</td>
     </tr>
 </table>
