--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <table border="1">
+   <caption>这是表格的标题</caption>
    <tr>
       <th>作業:HTML表格</th>
    </tr>
-        <tr>
-           <td>班級</td>
-           <td>資工二甲</td>
-        </tr>
+      <tr>
+         <td>班級</td>
+         <td>資工二甲</td>
+      </tr>
     <tr>
      <td>姓名</td>
      <td>謝子怡</td>
