--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <table border="1">
-   <caption>这是表格的标题</caption>
+   <caption><a href=””>回首頁</a></caption>
    <tr>
       <th>作業:HTML表格</th>
    </tr>
