--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<table border="1"><width>300px</width>
+<table border="1" width="300px">
    <caption><a href=”https://s1111032013.github.io/1111032013/”>回首頁</a></caption>
    <tr>
       <th>作業:HTML表格</th>
