--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<table border="1" width="300px">
+<table border="1" width="300px" colspan rowspan>
    <caption><a href=”https://s1111032013.github.io/1111032013/”>回首頁</a></caption>
    <tr>
       <td>作業:HTML表格</td>
