--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <table border="1" width="300px" colspan rowspan>
    <caption><a href="https://s1111032013.github.io/1111032013/">回首頁</a></caption>
+<thead>   
    <tr>
       <td>作業:HTML表格</td>
-   </tr>   
+   </tr>
+</thead>   
       <tr>
          <td>班級</td>
          <td>資工二甲</td>
